fixed the img bug

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                 </li>
                 <li>
                     <div>
-                        <img src="/Assets/ho.png" alt="house">
+                        <img src="./Assets/hh.png" alt="Home">
                     </div>
                     <span>Home & Office</span>
                 </li>
